--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.4"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,4 +24,41 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext{
+    androidXVersion = '1.0.0'
+    androidXAnnotations = '1.0.1'
+    androidXLegacySupport = '1.0.0'
+    appCompatVersion = '1.2.0'
+    materialVersion = '1.3.0'
+
+    fragmentVersion = '1.1.0-alpha07'
+    fragmentKtxVersion = '1.1.0-rc01'
+
+    // ConstraintLayout
+    constraintLayoutVersion = '2.0.4'
+
+    // RecyclerView
+    recyclerViewVersion = '1.2.0-beta02'
+
+    // CardView
+    cardVersion = '1.0.0'
+
+    // ViewPager2
+    viewPager2Version = '1.1.0-alpha01'
+
+    // Architecture MVVM & LiveData
+    archLifecycleVersion = '2.1.0-rc01'
+
+    // Room
+    roomVersion = '2.2.3'
+
+    // Navigation Component
+    navigationVersion = '2.3.4'
+
+    // Coroutines
+    coroutinesVersion = '1.3.7'
+
+    // Retrofit
+    retrofitVersion = '2.9.0'
 }
