--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     // Core for extension functions
     implementation 'androidx.core:core-ktx:1.3.2'
 
