--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,11 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-runtime-ktx:$rootProject.navigationVersion"
 
+    // implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
+   // implementation 'android.arch.navigation:navigation-ui:1.0.0'
+   // implementation "androidx.navigation:navigation-dynamic-features-fragment:$rootProject.navigationVersion"
+
+
     //Glide
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
