--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,12 @@ dependencies {
     //loader
     implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4.2'
 
+    //room
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
