--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
-
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -87,10 +87,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
     //fragment & activity ktx
-    implementation "androidx.fragment:fragment-ktx:1.3.0"
-    implementation 'androidx.activity:activity-ktx:1.2.0'
+    implementation "androidx.fragment:fragment-ktx:1.3.1"
+    implementation 'androidx.activity:activity-ktx:1.2.1'
 
     //loader
     implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4.2'
@@ -100,6 +102,14 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
 
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    //common
+    implementation project(path:':common')
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
