--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+  //  annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
     //fragment & activity ktx
     implementation "androidx.fragment:fragment-ktx:1.3.1"
@@ -105,6 +105,8 @@ dependencies {
 
     //common
     implementation project(path:':common')
+    //networker
+    implementation project(path:':networker')
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
