--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     //fragment & activity ktx
     implementation "androidx.fragment:fragment-ktx:1.3.1"
     implementation 'androidx.activity:activity-ktx:1.2.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha03"
 
     //loader
     implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4.2'
